--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <iframe style="margin:10px; height:620px; width:820px;"
             src="gamebox.html" frameborder="0"></iframe>
         <p style="padding-left:20px; color:#6B3513">
-            点击橄榄色区域改变重力方向。<b>当四面都有方块接触时游戏结束。</b></br>
+            点击橄榄色区域改变重力方向。<b>当四面都有方块接触，且持续 2 秒后游戏结束。</b></br>
             灵感来源于《2048》与《合成大西瓜》</br>
-            By 破壁人五号（Wallbreaker5th）</br>
+            By 破壁人五号（Wallbreaker5t<span id="secret">h</span>）</br>
             <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1279662773'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1279662773%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>        </p>
     </div>
 </body>
